--- a/order-2.html
+++ b/order-2.html
@@ -8,7 +8,7 @@
     <title>Order</title>
     <link href="https://fonts.cdnfonts.com/css/tt-norms-pro" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/style.min.css">
+       <link rel="stylesheet" href="css/style.min-za.css">
 </head>
 
 <body>
@@ -17,39 +17,75 @@
         <header class="header">
             <div class="container">
                 <div class="header__inner">
-                    <a class="header__logo logo" href="#">
+                    <a class="header__logo logo " href="#">
                         <picture class="logo__img">
-                            <img class="logo__img-image" src="images/logo.svg" alt="logo">
+                            <img class="logo__img-image" src="images/za-logo.svg" alt="logo">
                         </picture>
                     </a>
-                    <a class="header__tel tel" href="tel:2470">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
-                            <path
-                                d="M19.9987 10.0148C19.9987 15.5392 15.521 20.0134 10.0014 20.0134C4.47768 20.0134 0 15.5352 0 10.0148C0 4.49036 4.47768 0.016116 10.0014 0.016116C15.521 0.0120924 19.9987 4.49036 19.9987 10.0148Z"
-                                fill="#BED732" />
-                            <path d="M30.0002 0H28.2178V30H30.0002V0Z" fill="black" />
-                            <path d="M26.1021 0H22.1992V30H26.1021V0Z" fill="black" />
-                            <path
-                                d="M16.3342 3.03369H13.1197L13.0876 3.94302V11.3223L17.3359 11.3666L14.029 22.4516L9.37831 22.4275L5.53223 29.9959L10.0501 29.9999C13.1922 29.9999 17.9756 27.5656 19.2348 23.2523C20.8119 17.8567 20.4457 19.273 22.5056 11.4631C23.7205 6.84807 20.2325 3.03369 16.3342 3.03369Z"
-                                fill="black" />
-                        </svg>
-                        <span>
-                            2470
-                        </span>
-                    </a>
+                    <div class="header__phone phone">
+                        <div class="phone__heading phone-heading">
+                            <div class="phone-heading__inner">
+                                <div class="phone-heading__icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14"
+                                    fill="none">
+                                    <g clip-path="url(#clip0_2001_1693)">
+                                        <path
+                                            d="M13.6189 10.2746L11.6652 8.32085C10.9674 7.62308 9.7812 7.90222 9.50209 8.80928C9.29276 9.4373 8.595 9.78618 7.96701 9.6466C6.57148 9.29772 4.68751 7.48353 4.33863 6.01822C4.1293 5.39021 4.54796 4.69244 5.17595 4.48314C6.08304 4.20403 6.36215 3.01783 5.66439 2.32007L3.71064 0.366327C3.15243 -0.122109 2.31511 -0.122109 1.82668 0.366327L0.500926 1.69208C-0.824828 3.08761 0.640479 6.78576 3.91997 10.0653C7.19947 13.3448 10.8976 14.8799 12.2932 13.4843L13.6189 12.1586C14.1074 11.6003 14.1074 10.763 13.6189 10.2746Z"
+                                            fill="white" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_2001_1693">
+                                            <rect width="14" height="14" fill="white" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                                </div>
+                                <a class="phone-heading__link" href="tel:88000040125">
+                                    8 800 004 01 25
+                                </a>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10"
+                                    viewBox="0 0 10 10" fill="none">
+                                    <path
+                                        d="M7.85018 4.99997C7.85018 4.82075 7.78175 4.64155 7.64518 4.50492L3.34536 0.205141C3.07184 -0.0683805 2.62837 -0.0683805 2.35496 0.205141C2.08155 0.478553 2.08155 0.921933 2.35496 1.19548L6.15968 4.99997L2.35509 8.80449C2.08168 9.07801 2.08168 9.52135 2.35509 9.79474C2.6285 10.0684 3.07197 10.0684 3.34549 9.79474L7.64531 5.49503C7.78191 5.35832 7.85018 5.17913 7.85018 4.99997Z"
+                                        fill="white" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="phone__inner">
+                            <div class="phone__box phone-box">
+                                <div class="phone-box__label">
+                                    Кыргыстан
+                                </div>
+                                <a class="phone-box__link" href="tel:+77273470901">
+                                    +7 727 347 09 01
+                                </a>
+                            </div>
+                            <div class="phone__box phone-box">
+                                <div class="phone-box__label">
+                                    Email
+                                </div>
+                                <a class="phone-box__link" href="mailto:support@3Aassistance.com">
+                                    support@3Aassistance.com
+                                </a>
+                            </div>
+                            <a class="phone__link" href="#">
+                                Обратная связь
+                            </a>
+                        </div>
+                    </div>
                     <div class="header__burger burger">
                         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="40" height="40" rx="4" fill="#BED732"></rect>
-                            <rect x="9" y="9" width="22" height="2" rx="1" fill="white"></rect>
-                            <rect x="9" y="19" width="22" height="2" rx="1" fill="white"></rect>
-                            <rect x="9" y="29" width="22" height="2" rx="1" fill="white"></rect>
+                            <rect width="40" height="40" rx="4" fill="#AC2A21"></rect>
+                            <rect x="9" y="9" width="22" height="2" rx="1" fill="#fff"></rect>
+                            <rect x="9" y="19" width="22" height="2" rx="1" fill="#fff"></rect>
+                            <rect x="9" y="29" width="22" height="2" rx="1" fill="#fff"></rect>
                         </svg>
                         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="40" height="40" rx="4" fill="#BED732"></rect>
+                            <rect width="40" height="40" rx="4" fill="#AC2A21"></rect>
                             <rect x="9.91528" y="8.50098" width="30.5241" height="2" rx="1"
-                                transform="rotate(45 9.91528 8.50098)" fill="white"></rect>
+                                transform="rotate(45 9.91528 8.50098)" fill="#fff"></rect>
                             <rect x="31.499" y="9.91504" width="30.5241" height="2" rx="1"
-                                transform="rotate(135 31.499 9.91504)" fill="white"></rect>
+                                transform="rotate(135 31.499 9.91504)" fill="#fff"></rect>
                         </svg>
                     </div>
                 </div>
@@ -71,10 +107,10 @@
                                                     <g clip-path="url(#clip0_159_7449)">
                                                         <path
                                                             d="M17.6977 8.04666L9.62169 0.687835C9.26721 0.364785 8.73266 0.36482 8.37832 0.6878L0.302274 8.04669C0.0183179 8.30544 -0.0754788 8.70411 0.0632475 9.06232C0.202009 9.42053 0.53986 9.65196 0.924012 9.65196H2.21389V17.0249C2.21389 17.3173 2.45091 17.5543 2.74324 17.5543H7.16989C7.46222 17.5543 7.69924 17.3173 7.69924 17.0249V12.5483H10.3009V17.025C10.3009 17.3173 10.5379 17.5543 10.8302 17.5543H15.2567C15.549 17.5543 15.786 17.3173 15.786 17.025V9.65196H17.0761C17.4602 9.65196 17.7981 9.42049 17.9369 9.06232C18.0754 8.70408 17.9817 8.30544 17.6977 8.04666Z"
-                                                            fill="#BED732" />
+                                                            fill="#AC2A21" />
                                                         <path
                                                             d="M15.648 1.5022H12.093L16.1773 5.21596V2.03151C16.1773 1.73919 15.9403 1.5022 15.648 1.5022Z"
-                                                            fill="#BED732" />
+                                                            fill="#AC2A21" />
                                                     </g>
                                                     <defs>
                                                         <clipPath id="clip0_159_7449">
@@ -268,7 +304,7 @@
                                             <h2 class="offers__titling-title title">
                                                 Ваш заказ №0101010101
                                             </h2>
-                                            <div class="offers__titling-tag tag tag--green">
+                                            <div class="offers__titling-tag tag tag--red">
                                                 Оплачен
                                             </div>
                                         </div>
@@ -290,7 +326,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="offers-heading__wrapper">
-                                                        <div class="offers-heading__until btn btn--green" href="#">
+                                                        <div class="offers-heading__until btn btn--red" href="#">
                                                             до 16.03.2024
                                                         </div>
                                                         <div class="offers-heading__tag tag tag--orange" href="#">
@@ -324,7 +360,7 @@
                                                                     <div class="offers-sublist__text">
                                                                         осталось 5 вызовов
                                                                     </div>
-                                                                    <a class="offers-sublist__link btn btn--green"
+                                                                    <a class="offers-sublist__link btn btn--red"
                                                                         href="#">
                                                                         Заказать услугу
                                                                     </a>
@@ -350,7 +386,7 @@
                                                                     <div class="offers-sublist__text">
                                                                         лимит исчерпан
                                                                     </div>
-                                                                    <a class="offers-sublist__link btn btn--green"
+                                                                    <a class="offers-sublist__link btn btn--red"
                                                                         href="#">
                                                                         Заказать услугу
                                                                     </a>
@@ -480,7 +516,7 @@
                                                     <p class="payment-body__subtext">
                                                         Или вручную - Платежи - в поиске hoster.kz
                                                     </p>
-                                                    <a class="payment-body__link btn btn--green" href="#">
+                                                    <a class="payment-body__link btn btn--red" href="#">
                                                         Оплатить заказ
                                                     </a>
                                                 </div>
@@ -541,7 +577,7 @@
                                                     Теперь он в разделе Заказы - там можно проверить статус.
                                                 </p>
                                             </div>
-                                            <a class="payment-item__link btn btn--green" href="#">
+                                            <a class="payment-item__link btn btn--red" href="#">
                                                 Перейти в заказы
                                             </a>
                                         </div>
