--- a/data.html
+++ b/data.html
@@ -22,7 +22,7 @@
                             <img class="logo__img-image" src="images/logo.svg" alt="logo">
                         </picture>
                     </a>
-                    <a class="header__phone phone" href="tel:2470">
+                    <a class="header__tel tel" href="tel:2470">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
                             <path
                                 d="M19.9987 10.0148C19.9987 15.5392 15.521 20.0134 10.0014 20.0134C4.47768 20.0134 0 15.5352 0 10.0148C0 4.49036 4.47768 0.016116 10.0014 0.016116C15.521 0.0120924 19.9987 4.49036 19.9987 10.0148Z"
@@ -37,6 +37,21 @@
                             2470
                         </span>
                     </a>
+                    <div class="header__burger burger">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="40" height="40" rx="4" fill="#BED732"></rect>
+                            <rect x="9" y="9" width="22" height="2" rx="1" fill="white"></rect>
+                            <rect x="9" y="19" width="22" height="2" rx="1" fill="white"></rect>
+                            <rect x="9" y="29" width="22" height="2" rx="1" fill="white"></rect>
+                        </svg>
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="40" height="40" rx="4" fill="#BED732"></rect>
+                            <rect x="9.91528" y="8.50098" width="30.5241" height="2" rx="1"
+                                transform="rotate(45 9.91528 8.50098)" fill="white"></rect>
+                            <rect x="31.499" y="9.91504" width="30.5241" height="2" rx="1"
+                                transform="rotate(135 31.499 9.91504)" fill="white"></rect>
+                        </svg>
+                    </div>
                 </div>
             </div>
         </header>
