--- a/network.html
+++ b/network.html
@@ -22,7 +22,7 @@
                             <img class="logo__img-image" src="images/logo.svg" alt="logo">
                         </picture>
                     </a>
-                    <a class="header__phone phone" href="tel:2470">
+                    <a class="header__tel tel" href="tel:2470">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
                             <path
                                 d="M19.9987 10.0148C19.9987 15.5392 15.521 20.0134 10.0014 20.0134C4.47768 20.0134 0 15.5352 0 10.0148C0 4.49036 4.47768 0.016116 10.0014 0.016116C15.521 0.0120924 19.9987 4.49036 19.9987 10.0148Z"
